<resources>
    <string name="app_name">Bibliophile</string>
    <string name="action_settings">Settings</string>
    <string name="please_enable_all_permission">Please enable all permission</string>
    <string name="title_activity_selection">Selection</string>
    <string name="email">Email or phone</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login">Login</string>
    <string name="join_us">Join us</string>
    <string name="student">STUDENT</string>
    <string name="dont_have">Dont</string>
    <string name="phone_number">Phone number</string>
    <string name="register">Register</string>
    <string name="course">Course</string>
    <string name="name">Name</string>
    <string name="canter_name">Center name</string>
    <string name="con_password">Confirm password</string>
    <string name="dob">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="married">Married</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="add_member">Add member</string>
    <string name="my_group">My Group</string>
    <string name="submit">Submit</string>
    <string name="login_to_existing_acc">LOGIN TO EXISTING ACCOUNTS</string>
    <string name="login_to_existing_text">if you already have an account please login here</string>
    <string name="terms_and_conditions">I accept terms and conditions</string>
    <string name="create_account">Create account</string>
    <string name="rs">\u20B9</string>

    <!--ios alert string-->
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="error">Error!</string>


    <!--contacts us-->
    <string name="contact_us_subject"> Subject </string>
    <string name="contact_us_message"> Message </string>



    <!--joinus-->
    <string name="center_email">Center email</string>
    <string name="center_name">Center name</string>
    <string name="contact_person">Contact person</string>
    <string name="contact_address">Center address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="contact_no">Contact no</string>
    <string name="select_courses">Select courses</string>
    <string name="error_select_courses">Please select courses</string>
    <string name="select_package">Select Package</string>
    <string name="package_">Package</string>
    <string name="annual_package">Annual</string>
    <string name="package_half_yearly">Half yearly</string>
    <string name="payment">Payment</string>
    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>


    <!--testUseString-->
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="cancel">Cancel</string>
    <string name="test_result">Test Result</string>
    <string name="test_series">Test Series</string>
    <string name="student_">Student</string>

    <string name="my_course">My Course</string>
    <string name="take_test">Take Test</string>
    <string name="group">Group</string>
    <string name="my_post">My Post</string>
    <string name="new_group">New group</string>
    <string name="group_name">Group name</string>
    <string name="title_activity_student_list">StudentListActivity</string>
    <string name="title_activity_group_view">GroupViewActivity</string>
    <string name="no_test_serise">Test serise not found</string>

    <!--Setting String-->
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="change_password">Change Password</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="push_notification">Push Notification</string>
    <string name="mail_notification">Mail Notification</string>
    <string name="edit_profile">Edit Profie</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="contact_us">Contact Us</string>
    <string name="support">Support</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>


    <!--Account String-->
    <string name="account_details">ACCOUNT DETAILS</string>
    <string name="profile_details">PROFILE DETAILS</string>
    <string name="payment_details">PAYMENT DETAILS</string>
    <string name="payment_type">PAYMENT TYPE</string>
    <string name="due_amount">DUE AMOUNT</string>
    <string name="total_payment">TOTAL PAYMENY</string>
    <string name="pay_amount">PAY AMOUNT</string>


    <!--   demo-->
    <string name="demo_name">Sunil kumar sharma</string>
    <string name="demo_time">15 May 2014 at 05:30 PM</string>
    <string name="demo_center">Nice coaching center</string>
    <string name="demo_comments">15 comments</string>
    <string name="demo">GridLayoutManager (Context context, int spanCount ) : It is used to create a Vertical GridLayoutManager. In this constructor first parameter is used to set the current context and second parameter is used to set the span Count means the number of columns in the grid.</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_center_student_list">CenterStudentListActivity</string>
    <string name="title_activity_setting">SettingActivity</string>

    <!--Common Error String-->
    <string name="msg_for_permission">You can enable permission from setting of this app under permission section.</string>

    <string name="msg_email_empty"> Email should not be empty</string>
    <string name="msg_invalid_email"> Email and password should not be empty</string>

    <string name="msg_email_valid"> Email not valid</string>
    <string name="msg_pass_empty"> Password should not be empty</string>
    <string name="msg_pass_length"> Password must be at least 6 characters long. Please try again.</string>
    <string name="msg_opt_empty"> OTP should not be empty</string>
    <string name="msg_suject_empty"> Subject should not be empty</string>
    <string name="msg_body_empty"> Body should not be empty</string>
    <string name="msg_name_empty"> name should not be empty</string>
    <string name="msg_phone_empty"> Phone should not be empty</string>
    <string name="msg_phone_length"> Phone must be at least 8 characters long. Pleash Try again.</string>
    <string name="msg_field_empty"> Shuttle field should not be empty</string>
    <string name="msg_hotel_error"> It seems like you are not near airport or hotel that are associated with us so you cannot book shuttle from this location.</string>
    <string name="msg_internet"> Please check your internet connection! </string>
    <string name="msg_failure"> It’s not you, it’s us. Give it another try, please. </string>
    <string name="msg_server_error"> Server encountered an error! </string>
    <string name="get_details"> Getting Details... </string>
    <string name="get_notification"> Getting Notifications... </string>
    <string name="msg_follow_truck"> Following Truck </string>
    <string name="msg_un_follow_truck"> Unfollowing Truck </string>
    <string name="msg_cancelling_order"> Cancelling Order </string>
    <string name="msg_sorry_follow"> Sorry!\nThis feature is only available for registered user\'s. </string>

    <string name="msg_clear_cart"> Are you sure you want to clear cart </string>
    <string name="msg_delete_item_cart"> Are you sure you wish to delete </string>
    <string name="thnaks_for_placing_the_order"> Thanks for placing the order. You will be acknowledged soon by </string>
    <string name="you_can_check_your_order"> You can check your order status </string>
    <string name="please_chose_atlease"> Please Choose atleast one required choice</string>
    <string name="your_previous_cart_items_will_be">Your previous cart items will be cleared. Are you sure you want to add these items to cart ?</string>

    <string name="msg_logout"> Are you sure you wish to logout?</string>
    <string name="msg_otp_resend"> OTP re-sent successfully</string>

    <string name="authenticating"> Authenticating... </string>
    <string name="logging_out"> Logging You Out... </string>
    <string name="checking_email"> Checking Email Availability... </string>
    <string name="requesting_otp"> Requesting OTP... </string>
    <string name="requesting_starting"> Requesting Starting... </string>
    <string name="please_wait"> Please Wait... </string>
    <string name="locating"> Locating... </string>
    <string name="updating_profile"> Updating Profile... </string>
    <string name="get_history"> Getting History... </string>
    <string name="getting_filters"> Getting Filters </string>
    <string name="msg_loading"> Loading... </string>
    <string name="msg_cancelling_booking"> Cancelling Booking... </string>
    <string name="msg_rating"> Rating... </string>

    <string name="getting_truck_menu"> Getting Truck Menu</string>


    <string name="retry"> Retry </string>
    <string name="back"> Back </string>
    <string name="all_fields_are_required"> All fields are required. </string>
    <string name="new_password_and_confirm"> New password and confirm password do not match. </string>
    <string name="msg_camera_alert">Choose Profile Pic From</string>


    <string name="media_library">Media Library</string>
    <string name="camera">Camera</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_your_password">Reset your password</string>
    <string name="forgot_your_password_text">Enter your email address and we will send you a link to reset your password.</string>
   
    
    <!--notification strings-->
    <string name="accept"> Accept </string>

    <string name="active"> Active </string>
    <string name="msg_active"> Are you sure you wish to Active?</string>
    <string name="deactive"> Deactive </string>
    <string name="msg_deactive"> Are you sure you wish to Deactive?</string>
    <string name="subject"> Subject </string>


    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="skip">SKIP</string>

</resources>
