<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/dp_10"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_20">

            <com.bibliophile.custom.TextViewRegularBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_40"
                android:gravity="center"
                android:text="@string/forgot_your_password"
                android:textColor="@color/light_black"
                android:textSize="@dimen/sp_20" />

            <com.bibliophile.custom.TextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forgot_your_password_text" />

            <com.bibliophile.custom.EditTextRegular
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_40"
                android:hint="@string/email" />

            <com.bibliophile.custom.RippleView
                android:id="@+id/btnResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@color/orange"
                android:gravity="center"
                android:minHeight="@dimen/dp_40"
                android:minWidth="@dimen/dp_170"
                android:text="@string/reset_password"
                android:textColor="@color/white" />

        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>