<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:focusable="true"
    android:gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/round_corner_white_bg"
        android:orientation="vertical">

        <com.bibliophile.custom.TextViewRegularBold
            android:id="@+id/txtCMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
           android:padding="10dp"
            android:gravity="center"
            android:text="@string/msg_camera_alert"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
             />

        <View
            android:id="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <com.bibliophile.custom.TextViewRegular
            android:id="@+id/txtFromGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/media_library"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <com.bibliophile.custom.TextViewRegular
            android:id="@+id/txtFromCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/camera"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <com.bibliophile.custom.TextViewRegular
            android:id="@+id/txtCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
