<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <com.bibliophile.custom.ImageViewCircle
                android:id="@+id/imgProfile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_5"
                android:src="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <com.bibliophile.custom.TextViewRegularBold
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:singleLine="true"
                    android:text="@string/demo_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_14" />

                <com.bibliophile.custom.TextViewRegular
                    android:id="@+id/txtDateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:singleLine="true"
                    android:text="@string/demo_time"
                    android:textSize="@dimen/sp_10" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.bibliophile.custom.TextViewRegular
                    style="@style/textSmall"
                    android:paddingLeft="5dp"
                    android:text="@string/subject"
                    android:textSize="@dimen/sp_10"
                    android:textColor="@color/gray"
                    android:paddingRight="5dp" />

                <com.bibliophile.custom.TextViewRegular
                    android:id="@+id/txtSubject"
                    style="@style/textSmall"
                    android:paddingLeft="5dp"
                    android:textSize="@dimen/sp_12"
                    android:paddingRight="5dp" />
            </LinearLayout>

            <!--<View-->
                <!--android:layout_width="1dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@color/gray" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.bibliophile.custom.TextViewRegular
                    style="@style/textSmall"
                    android:text="@string/course"

                    android:textColor="@color/gray"
                    android:textSize="@dimen/sp_10"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"  />

                <com.bibliophile.custom.TextViewRegular
                    android:id="@+id/txtCourse"
                    style="@style/textSmall"
                    android:textSize="@dimen/sp_12"
                    android:paddingLeft="5dp"

                    android:paddingRight="5dp" />
            </LinearLayout>
        </LinearLayout>


        <com.bibliophile.custom.TextViewRegular
            android:id="@+id/txtDescription"
            style="@style/textSimple"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="@dimen/dp_10"/>


        <com.bibliophile.custom.RippleView
            android:id="@+id/btnActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:minHeight="@dimen/dp_40"
            android:padding="@dimen/dp_5"
            android:text="@string/active"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_16"
            android:visibility="gone" />

        <com.bibliophile.custom.RippleView
            android:id="@+id/btnDeactive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:textColor="@color/orange"
            android:minHeight="@dimen/dp_40"
            android:text="@string/deactive"
            android:visibility="gone" />
    </LinearLayout>


</RelativeLayout>